<resources>
    <string name="app_name">Budget Manager</string>
    <string name="add_name">add Action</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_data">There is no actions</string>
    <string name="summary">Summary</string>
    <string name="home">Home</string>
    <string name="title_activity_add_action">AddActionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="income">Income</string>
    <string name="mortgage">Mortgage</string>
    <string name="utilities">Utilities</string>
    <string name="entertainment">Entertainment</string>
    <string name="groceries">Groceries</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="balance">Balance</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>

    <string name="generic_income">your income in this time is %s.</string>
    <string name="generic_paid">you spent %s in this time.</string>
    <string name="generic_saved">you saved %s in this time.</string>
    <string name="paid_chart">Paid Chart</string>
    <string name="income_chart">Income Chart</string>
    <string name="last_weak">Last Weak</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="saved">Saved</string>
    <string name="paid">Paid</string>


</resources>