<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:background="#332131"
    android:elevation="4dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/item_date_textview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="start|center_vertical"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_category_textview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="start|center_vertical"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_description_textview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="start|center_vertical"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_amount_textview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="start|center_vertical"
        android:text="@string/amount"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_balance_textview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="start|center_vertical"
        android:text="@string/balance"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>