<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialogViewModel"
            type="com.elsawy.budgetmanager.ui.main.DialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:padding="18dp">

        <ImageView
            android:id="@+id/date_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{dialogViewModel.convertTimeStampToDate(dialogViewModel.date)}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/date_image"
            app:layout_constraintStart_toEndOf="@+id/date_image"
            app:layout_constraintTop_toTopOf="@+id/date_image" />

        <TextView
            android:id="@+id/category_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:afterTextChanged="@{(edtitable)-> dialogViewModel.updateCategory(edtitable)}"
            android:text="@string/category"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/date_image"
            app:layout_constraintEnd_toStartOf="@id/category_image"
            app:layout_constraintTop_toTopOf="@+id/date_image" />

        <ImageView
            android:id="@+id/category_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_drop_down"
            app:layout_constraintBottom_toBottomOf="@id/date_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/date_image" />

        <EditText
            android:id="@+id/amount_edittext"
            style="@style/custom_dialog_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:afterTextChanged="@{(edtitable)-> dialogViewModel.updateAmount(edtitable)}"
            android:hint="@string/amount"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/date_image"
            app:layout_constraintTop_toBottomOf="@id/category_textview" />

        <EditText
            android:id="@+id/description_edittext"
            style="@style/custom_dialog_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:afterTextChanged="@{(edtitable)-> dialogViewModel.updateDescription(edtitable)}"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_edittext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/description_edittext">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_dialog_btn"
            style="@style/custom_dialog_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/cancel"
            app:cornerRadius="10dp"
            android:onClick="@{()-> dialogViewModel.cancelDialog()}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_dialog_btn"
                style="@style/custom_dialog_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()-> dialogViewModel.onSaveClicked()}"
                android:text="@string/save"
                app:cornerRadius="10dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>